@@ -4,6 +4,7 @@ import com.blck.demo_expenses.DB.*;
 import com.blck.demo_expenses.ResponseDTOs.ExpenseSumByCategory;
 import jakarta.persistence.EntityNotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
@@ -25,28 +26,46 @@ public class ApiController {
 	}
 
 	@PostMapping("/categories")
-	public ResponseEntity<Category> addCategory(@RequestBody CategoryDTO dto) {
+	public ResponseEntity<?> addCategory(@RequestBody CategoryDTO dto) {
+		if (categoryRepository.findByName(dto.name()).isPresent()) {
+			return ResponseEntity.status(HttpStatus.CONFLICT)
+					.body("Category already exists: " + dto.name());
+		}
 		Category category = new Category(dto);
-		Category result = categoryRepository.save(category);
-		return ResponseEntity.ok(result);
+		Category saved = categoryRepository.save(category);
+		return ResponseEntity.status(HttpStatus.CREATED).body(saved);
+	}
+
+	@GetMapping("/categories")
+	public ResponseEntity<List<CategoryDTO>> getAllCategories() {
+		List<CategoryDTO> allCategories = categoryRepository.findAll().stream()
+				.map(category -> new CategoryDTO(category.getName()))
+				.toList();
+		return ResponseEntity.ok(allCategories);
+	}
+
+	@DeleteMapping("/categories/{name}")
+	public ResponseEntity<Void> deleteCategory(@PathVariable String name) {
+		Optional<Category> category = categoryRepository.findByName(name);
+		if (category.isEmpty())
+			return ResponseEntity.notFound().build();
+		categoryRepository.delete(category.get());
+		return ResponseEntity.noContent().build();
 	}
 
 	@PostMapping("/expenses")
-	public ResponseEntity<Expense> addExpense(@RequestBody ExpenseDTO expenseDTO) {
+	public ResponseEntity<?> addExpense(@RequestBody ExpenseDTO expenseDTO) {
 		Category category = categoryRepository.findByName(expenseDTO.categoryFK())
 				.orElseThrow(() -> new EntityNotFoundException("Category not found: " + expenseDTO.categoryFK()));
+		boolean expenseExists = category.getExpenses().stream()
+				.anyMatch(e -> expenseDTO.name().equalsIgnoreCase(e.getName()));
+		if (expenseExists) {
+			return ResponseEntity.status(HttpStatus.CONFLICT)
+					.body("Expense already exists: " + expenseDTO.name());
+		}
 		Expense expense = new Expense(expenseDTO, category);
 		Expense result = expenseRepository.save(expense);
 		return ResponseEntity.ok(result);
-	}
-
-	@DeleteMapping("/expenses/{name}")
-	public ResponseEntity<Void> deleteExpense(@PathVariable String name) {
-		Optional<Expense> expenseOpt = expenseRepository.findByName(name);
-		if (expenseOpt.isEmpty())
-			return ResponseEntity.notFound().build();
-		expenseRepository.delete(expenseOpt.get());
-		return ResponseEntity.noContent().build();
 	}
 
 	@GetMapping("/expenses")
@@ -58,7 +77,7 @@ public class ApiController {
 						expense.getDate(),
 						expense.getCategoryFK().getName()
 				))
-				.collect(Collectors.toList());
+				.toList();
 		return ResponseEntity.ok(allExpenses);
 	}
 
